Actually fixed overlap this time.

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,10 +1,4 @@
-html{
-  /* min-height:100%; */
-  height: 100%;
-}
-
 html, body {
-  min-height: 100vh;
   margin: 0;
   padding:0;
 }
@@ -41,6 +35,7 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 70px;
   margin-top: 5%;
   color: darkgrey;
   text-align: center;
@@ -88,8 +83,7 @@ table, td, th {
 .content {
   background-color: #4A5C80;
   width: 70%;
-  padding: 0;
-  min-height: 100vh;
+  padding-bottom: 70px;
 }
 
 .button {
@@ -149,6 +143,10 @@ table, td, th {
   padding: 10px;
   border: 0;
   margin: 10px;
+}
+
+.npcPhoto {
+  width: 200px;
 }
 
 #aboutTable {
